Used Code Inspection tools to fix minor issues and updated README.md